# SLAM

my_amr_description/: CMakeLists.txt  new.world  package.xml
my_amr_description/hooks/: my_amr_description.sh.in
my_amr_description/launch/: back.py  controller.launch.py  controller.yaml  display.launch.py  gazebo.launch.py  rviz.rviz  urdf.rviz  world.launch.py
my_amr_description/map/: bookstore_map.pgm
my_amr_description/meshes/: Component7_1.stl  base_link.stl  left_tyre_1.stl  lidar_1.stl  right_tyre_1.stl  top_1.stl
my_amr_description/urdf/: materials.xacro  my_amr.gazebo  my_amr.trans  my_amr.xacro
my_amr_description/world/: bookstore.world  cafe1.world
my_nav2/: CMakeLists.txt  package.xml
my_nav2/config/: config.yaml
my_nav2/launch/: my_bringup_launch.py  slam.launch.py
my_nav2/maps/: bookstore_map.yaml
my_nav2/params/: nav2_params.yaml  slam.yaml
my_nav2/scripts/: map.py  marker.py  my_nav_cmd.py  my_odom.py
my_nav2/src/: odometry_pub.cpp
nav2_gps_waypoint_follower_demo/: CMakeLists.txt  package.xml
nav2_gps_waypoint_follower_demo/config/: dual_ekf_navsat_params.yaml  gps_wpf_demo.mvc  nav2_no_map_params.yaml
nav2_gps_waypoint_follower_demo/launch/: dual_ekf_navsat.launch.py  gps_waypoint_follower.launch.py  mapviz.launch.py
