<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_gps_waypoint_follower_demo</name>
  <version>0.0.0</version>
  <description>Demo package for following GPS waypoints with nav2</description>
  <maintainer email="pedro.gonzalez@eia.edu.co">pepisg</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>MIT</license>
  <depend>rclcpp_components</depend> <!-- ROS2 componets aka ROS1 nodelets -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>navigation2</depend>
  <depend>robot_localization</depend>
  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>tile_map</depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
